--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-engine",
+  "name": "json-template-engine",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
