--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-template-engine",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "Tool for parsing json templates",
   "main": "index.js",
   "repository": "https://github.com/salahovilia/JSONTemplateEngine.git",
@@ -20,5 +20,6 @@
   },
   "prettier": {
     "printWidth": 100
-  }
+  },
+  "dependencies": {}
 }
