--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "json-template-engine",
-  "version": "1.0.17",
-  "description": "Tool for parsing json templates",
-  "main": "index.js",
+  "version": "2.0.0",
+  "description": "Lightweight tool for parsing json templates",
+  "main": "./dist/index.js",
+  "files": [
+    "dist"
+  ],
+  "types": "./dist/index.d.ts",
+  "typings": "./dist/index",
   "repository": "https://github.com/salahovilia/JSONTemplateEngine.git",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rollup -c",
+    "prepublish": "npm test && npm run build",
+    "start:dev": "rollup -cw",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "keywords": [
     "json",
@@ -15,9 +24,23 @@
   "author": "Salakhov Ilia",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@types/jest": "^26.0.10",
+    "@types/clone-deep": "^4.0.1",
+    "jest": "^26.4.2",
+    "prettier": "^1.19.1",
+    "rollup": "^2.26.5",
+    "rollup-plugin-analyzer": "^3.3.0",
+    "rollup-plugin-terser": "^7.0.0",
+    "rollup-plugin-typescript2": "^0.27.2",
+    "ts-jest": "^26.2.0",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   },
   "prettier": {
     "printWidth": 100
+  },
+  "dependencies": {
+    "clone-deep": "^4.0.1"
   }
 }
