--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "json-template-engine",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Lightweight tool for parsing json templates",
-  "main": "./dist/index.js",
+  "main": "./dist/json-template-engine.cjs.js",
+  "module": "./dist/json-template-engine.esm.js",
+  "browser": "./dist/json-template-engine.js",
   "files": [
     "dist"
   ],
@@ -24,22 +26,25 @@
   "author": "Salakhov Ilia",
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@types/jest": "^26.0.10",
     "@types/clone-deep": "^4.0.1",
-    "jest": "^26.4.2",
+    "@types/jest": "^26.0.20",
+    "jest": "^26.6.3",
     "prettier": "^1.19.1",
-    "rollup": "^2.26.5",
+    "rollup": "^2.36.1",
     "rollup-plugin-analyzer": "^3.3.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "rollup-plugin-typescript2": "^0.27.2",
-    "ts-jest": "^26.2.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.27.3",
+    "ts-jest": "^26.4.4",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   },
   "prettier": {
     "printWidth": 100
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
