--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "json-template-engine",
-  "version": "2.2.6",
+  "version": "2.2.9",
   "description": "Lightweight tool for parsing json templates",
   "main": "./dist/json-template-engine.cjs.js",
   "module": "./dist/json-template-engine.esm.js",
@@ -9,10 +9,10 @@
     "dist"
   ],
   "types": "./dist/index.d.ts",
-  "typings": "./dist/index",
+  "typings": "./dist/index.d.ts",
   "repository": "https://github.com/salakhovilia/JSONTemplateEngine.git",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rimraf ./dist && rollup -c",
     "prepublish": "npm test && npm run build",
     "start:dev": "rollup -cw",
     "test": "jest",
@@ -29,22 +29,21 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
-    "@types/clone-deep": "^4.0.1",
     "@types/jest": "^26.0.20",
     "jest": "^26.6.3",
     "prettier": "^1.19.1",
-    "rollup": "^2.36.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.44.0",
     "rollup-plugin-analyzer": "^3.3.0",
-    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-builtins": "^2.0.0",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.27.3",
+    "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^26.4.4",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   },
   "prettier": {
     "printWidth": 100
-  },
-  "dependencies": {}
+  }
 }
